--- a/.gitignore
+++ b/.gitignore
@@ -15,13 +15,13 @@ __pycache__
 /outputs
 /config.json
 /log
-/webui.settings.bat
+# /webui.settings.bat
 /embeddings
 /styles.csv
 /params.txt
 /styles.csv.bak
-/webui-user.bat
-/webui-user.sh
+# /webui-user.bat
+# /webui-user.sh
 /interrogate
 /user.css
 /.idea
